adicionando permissoes aos tipos de usuários
