# app/Modules/User/V1/Models/User.php
@@ -2,9 +2,12 @@
 
 namespace App\Modules\User\V1\Models;
 
+use App\Modules\Permissions\V1\Models\Permission;
+use App\Modules\Permissions\V1\Models\UserTypePermission;
 use App\Modules\Wallet\V1\Models\Wallet;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\Relations\HasOne;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
