# app/Modules/User/V1/Models/UserType.php
@@ -2,7 +2,9 @@
 
 namespace App\Modules\User\V1\Models;
 
+use App\Modules\Permissions\V1\Models\Permission;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 use Illuminate\Database\Eloquent\Relations\HasMany;
 
 class UserType extends Model
@@ -22,5 +24,14 @@ class UserType extends Model
         return $this->hasMany(User::class, 'user_type_id', 'id');
     }
 
+    public function permissions(): BelongsToMany
+    {
+        return $this->belongsToMany(
+            Permission::class,
+            'user_type_permissions',
+            'user_type_id',
+            'permission_id',
+        );
+    }
 
 }
